<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Galaxy SL Settings</string>

    <!-- Tabs -->
    <string name="category_general_title">General</string>
    <string name="category_screen_title">Screen</string>
    <string name="category_advanced_title">Advanced</string>

    <!-- Screen -->
    <string name="seekbar_btn_default_title">Default</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="seekbar_additional_information">Lower values increase sensitivity</string>

    <!-- Touchscreen -->
    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="touchscreen_sensitivity_seekbar_title">Sensitivity</string>

    <string name="touchscreen_disable_calibration_title_head">Manual calibration</string>
    <string name="touchscreen_disable_calibration_summary_head">Press simultaneously the volume keys to calibrate the touchscreen</string>

    <!-- Touchkeys -->
    <string name="touchkeys_subcat_title">Touchkeys</string>
    <string name="touchkeys_sensitivity_title_head">Touchkeys sensitivity</string>
    <string name="touchkeys_sensitivity_summary_head">Set touchkeys sensitivity</string>
    <string name="touchkeys_sensitivity_seekbar_title">Touchkey sensitivity</string>

    <string name="touchkeys_timeout_disabled_title_head">Disable backlight</string>
    <string name="touchkeys_timeout_disabled_summary_head">Go to the display settings to disable LED notifications</string>

    <string name="touchkeys_timeout_title_head">Backlight timeout</string>
    <string name="touchkeys_timeout_summary_head">Delay after a keypress before backlight turns off</string>
    <string name="touchkeys_timeout_seekbar_title">Timeout</string>

    <!-- Accelerometer -->
    <string name="accelerometer_subcat_title">Accelerometer</string>
    <string name="accelerometer_calibration_title_head">Calibrate</string>
    <string name="accelerometer_calibration_summary_head">Enable autoration, put your phone on a flat surface and press this to calibrate</string>
    <string name="accelerometer_dialog_head">Calibration done</string>
    <string name="accelerometer_dialog_message">The sensor has been successfully calibrated.</string>

    <!-- Vibrator -->
    <string name="vibrator_subcat_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator intensity</string>
    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>

    <!-- HSPA -->
    <string name="hspa_subcat_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <!-- CPU boost -->
    <string name="cpu_boost_freq_subcat_title">CPU</string>
    <string name="cpu_boost_freq_title_head">Boost</string>
    <string name="cpu_boost_freq_summary_head">Change boosting freq</string>
    <string name="cpu_boost_freq_notsupported">CPU governor not supported</string>

    <!-- FSync -->
    <string name="fsync_subcat_title">FSync</string>
    <string name="fsync_title_head">Disable FSync</string>
    <string name="fsync_summary_head">Improve performance, but it can cause data corruption</string>

    <!-- WakeLocks -->
    <string name="wakelocks_subcat_title">WakeLocks</string>

    <string name="battery_delay_title_head">Battery monitor</string>
    <string name="battery_delay_summary_head">Adjust the duration of samsung-battery</string>
    <string name="battery_delay_seekbar_title">WakeLock duration</string>
    <string name="seekbar_additional_information_battery">Too short intervals could increase the awake time</string>

    <string name="svnet_wakelock_title_head">Mobile data</string>
    <string name="svnet_wakelock_summary_head">Adjust the duration of svnet</string>
    <string name="svnet_wakelock_seekbar_title">WakeLock duration</string>
    <string name="seekbar_additional_information_svnet">Too short intervals could cause sync issues</string>

</resources>
