<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dip">

        <TextView android:id="@+id/seekbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/seekbar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/seekbar_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_title"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <LinearLayout
                android:id="@+id/seekbar_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="20dip"
                android:layout_below="@+id/seekbar_seekbar" >
            <TextView android:id="@+id/seekbar_btn_minus"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:layout_marginRight="30dip"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/minus" />
            <Button android:id="@+id/seekbar_btn_default"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:textSize="12sp"
                    android:text="@string/seekbar_btn_default_title" />
            <TextView android:id="@+id/seekbar_btn_plus"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:layout_marginLeft="30dip"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@string/plus" />
        </LinearLayout>

        <TextView
                android:id="@+id/seekbar_additional_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:textColor="@android:color/tertiary_text_dark"
                android:layout_below="@+id/seekbar_linearLayout"
                android:gravity="center_horizontal"
                android:paddingLeft="15dip"
                android:paddingRight="15dip" />

    </RelativeLayout>
</ScrollView> 
